--- a/index.html
+++ b/index.html
@@ -278,13 +278,24 @@
         </div>
     </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <p>&copy; 2025 Rajesh Prashanth Anandavadivel</p>
-            </div>
+<footer>
+    <div class="container">
+        <div class="footer-content">
+            <p>&copy; 2025 Rajesh Prashanth Anandavadivel</p>
+            <p>
+                Source: 
+                <a href="https://github.com/rajeshprasanth/rphomelab.in" target="_blank" rel="noopener noreferrer">
+                    GitHub Repository
+                </a>
+            </p>
+            <p>
+                Contact: 
+                <a href="mailto:support@rphomelab.in">support@rphomelab.in</a>
+            </p>
         </div>
-    </footer>
+    </div>
+</footer>
+
 
 <script src="assets/js/script.js"></script>
 
