--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajesh Prashanth's IT Infrastructure Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -283,20 +284,17 @@
         <div class="footer-content">
             <p>&copy; 2025 Rajesh Prashanth Anandavadivel</p>
             <p>
-                Source: 
                 <a href="https://github.com/rajeshprasanth/rphomelab.in" target="_blank" rel="noopener noreferrer">
-                    GitHub Repository
+                    <i class="fab fa-github"></i> GitHub
                 </a>
-            </p>
-            <p>
-                Contact: 
-                <a href="mailto:support@rphomelab.in">support@rphomelab.in</a>
+                &nbsp; | &nbsp;
+                <a href="mailto:support@rphomelab.in">
+                    <i class="fas fa-envelope"></i> Email
+                </a>
             </p>
         </div>
     </div>
 </footer>
-
-
 <script src="assets/js/script.js"></script>
 
 </body>
