--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajesh Prashanth's IT Infrastructure Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">Welcome to Rajesh Prashanth's Homelab</div>
             <div class="tagline">An Enterprise-Grade Home Infrastructure & Development Laboratory</div>
+            <div class="social-links">
+                <a href="mailto:support@rphomelab.in" class="btn btn-outline">
+                    <i class="fas fa-envelope"></i> Email
+                </a>
+                <a href="https://github.com/rajeshprasanth/HomeLab" target="_blank" rel="noopener noreferrer" class="btn btn-outline">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+            </div>
         </div>
     </header>
 
@@ -279,24 +287,22 @@
         </div>
     </main>
 
-<footer>
-    <div class="container">
-        <div class="footer-content">
-            <p>&copy; 2025 Rajesh Prashanth Anandavadivel</p>
-            <p>
-                <!-- GitHub Icon -->
-                <a href="https://github.com/rajeshprasanth/rphomelab.in" target="_blank" rel="noopener noreferrer" title="GitHub">
-                    <img src="https://github.com/homarr-labs/dashboard-icons/blob/main/png/github.png?raw=true" alt="GitHub" width="24" height="24">
-                </a>
-                &nbsp; | &nbsp;
-                <!-- Email Icon -->
-                <a href="mailto:support@rphomelab.in" title="Email">
-                    <img src="https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/email.png" alt="Email" width="24" height="24">
-                </a>
-            </p>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-row">
+                    <p>&copy; 2025 Rajesh Prashanth Anandavadivel</p>
+                    <div class="footer-icons">
+                        <!-- GitHub Icon -->
+                        <a href="https://github.com/rajeshprasanth/rphomelab.in" target="_blank" rel="noopener noreferrer" title="GitHub">
+                            <img src="https://github.com/homarr-labs/dashboard-icons/blob/main/png/github-light.png?raw=true" alt="GitHub" width="40" height="40">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
+
 
 
 <script src="assets/js/script.js"></script>
