--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="logo">Welcome to Rajesh Prashanth's Homelab</div>
             <div class="tagline">An Enterprise-Grade Home Infrastructure & Development Laboratory</div>
             <div class="social-links">
-                <a href="mailto:support@rphomelab.in" class="btn btn-outline">
+                <a href="mailto:support@rphomelab.in" class="btn-outline">
                     <i class="fas fa-envelope"></i> Email
                 </a>
-                <a href="https://github.com/rajeshprasanth/HomeLab" target="_blank" rel="noopener noreferrer" class="btn btn-outline">
+                <a href="https://github.com/rajeshprasanth/HomeLab" target="_blank" rel="noopener noreferrer" class="btn-outline">
                     <i class="fab fa-github"></i> GitHub
                 </a>
             </div>
